# jqcpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  IDENTIFICATION.txt  README.md  README.txt  Sanitizers.cmake  demo  presentation.url
app/: expression_repl.cpp  main.cpp
include/jqcpp/: expression_interpreter.hpp  expression_parser.hpp  expression_tokenizer.hpp  jq_ast_node.hpp  jq_ast_visitor.hpp  jq_evaluator.hpp  jq_interpreter.hpp  jq_lex.hpp  jq_parser.hpp  jqcpp.hpp  json_parser.hpp  json_tokenizer.hpp  json_value.hpp  pretty_printer.hpp
src/: expression_interpreter.cpp  expression_parser.cpp  jq_evaluator.cpp  jq_interpreter.cpp  jq_parser.cpp  jqcpp.cpp  json_parser.cpp  json_tokenizer.cpp  pretty_printer.cpp
tests/: test_expression_interpreter.cpp  test_expression_parser.cpp  test_expression_tokenizer.cpp  test_jqcpp.cpp  test_json_parser.cpp  test_json_tokenizer.cpp  test_pretty_printer.cpp
tmp_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  install_manifest.txt  jqcpp
